Form bug fixes
fixed legend and labels overlapping.
Form is now consistent across moz and webkit browsers

--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,10 @@ TABLE OF CONTENTS
 1.Structure Control
 2.Nav
 3.Heading
-4.Album release sections
-5.Band member sections
-6.Mail form
+4.Album Release Section
+5.Band Member Section
+6.Mail Form Section
+ a.Age Fieldset Subsection
 ----------------------
 COLOR GUIDE
 
@@ -75,32 +76,35 @@ textarea {
 }
 
 .age select, .age label {
-    position: absolute;
+    position: relative;
 }
 
 .age select { /*adjust to change Y-Value*/
-    top: 1.8em;
+    top: .8em; /*moz ideal: 1.8em webkit ideal: 3.6em */
 }
 
 .age label {
-    top: .4em;
+    top: -.6em; /*moz ideal: .4em webkit ideal: 2.3em */
 }
 
-label[for="month"] {left: 0em;} /*adjust to change X-Value*/
-label[for="day"] {left: 9em;}
-label[for="year"] {left: 13.4em;}
+label[for="month"] {left: 0.1em;} /*adjust to change X-Value*/
+label[for="day"] {left: -2.5em;}
+label[for="year"] {left: -4.2em;}
 #month {
-    left: 0em;
+    left: -3em;
     width: 8.6em;
+    height: 1.6em;
 } /* keep month and day 8em apart*/
 
 #day {
-    left: 9em;
+    left: -4.6em;
     width: 3.9em;
+    height: 1.6em;
 } /*keep day and year 5em apart*/
 #year {
-left: 13.4em;
-width: 5.3em;
+    left: -6.4em;
+    width: 5.3em;
+    height: 1.6em;
 }
 /*FOOTER SECTION*/
 footer {
